jewel-datagrid: fix when dg can surround a container and its height is percentual so it need to not overflow the container and adapt to the container's height

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -508,6 +508,7 @@ j|VirtualComboBoxPopUp {
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: auto;
 }
 .jewel.datagrid .jewel.buttonbar.header {
   width: 100%;
