--- a/frameworks/projects/Jewel/src/main/sass/components/_datagrid.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_datagrid.sass
@@ -24,6 +24,7 @@
     display: flex
     flex-direction: column
     position: relative
+    overflow: auto
     
     .jewel.buttonbar.header
         width: 100%
